--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
   <h1>Module 4 Solution Starter</h1>
+  <p>Ctrl+Shift+"I" to open the console and view the successful logging =) </p>
 </body>
 </html>
